<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2024, Artelys (http://www.artelys.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>24</version>
        <relativePath/>
    </parent>

    <artifactId>powsybl-open-loadflow-knitro-solver</artifactId>
    <version>0.1.0-SNAPSHOT</version>

    <name>powsybl open loadflow knitro solver</name>
    <description>A Load Flow solver based on Knitro for PowSyBl Open Load Flow</description>
    <url>http://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-open-loadflow-knitro-solver.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-open-loadflow-knitro-solver.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-open-loadflow-knitro-solver</url>
    </scm>

    <developers>
        <developer>
            <name>Jeanne ARCHAMBAULT</name>
            <email>jeanne.archambault@artelys.com</email>
            <organization>Artelys</organization>
            <organizationUrl>http://www.artelys.com</organizationUrl>
        </developer>
        <developer>
            <name>Martin Debouté</name>
            <email>martin.deboute@artelys.com</email>
            <organization>Artelys</organization>
            <organizationUrl>http://www.artelys.com</organizationUrl>
        </developer>
        <developer>
            <name>Amine Makhen</name>
            <email>amine.makhen@artelys.com</email>
            <organization>Artelys</organization>
            <organizationUrl>http://www.artelys.com</organizationUrl>
        </developer>
        <developer>
            <name>Pierre Arvy</name>
            <email>pierre.arvy@artelys.com</email>
            <organization>Artelys</organization>
            <organizationUrl>http://www.artelys.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>21</java.version>
        <powsybl-core.version>7.0.0</powsybl-core.version>
        <powsybl-open-loadflow.version>2.0.0</powsybl-open-loadflow.version>
        <knitro-interfaces.version>14.2.0</knitro-interfaces.version>
        <bridj.version>0.7.0</bridj.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>templating-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>@{argLine} -Duser.language=en -Duser.region=US</argLine>
                        <classpathDependencyExcludes>
                            <classpathDependencyExclude>com.powsybl:powsybl-config-classic</classpathDependencyExclude>
                        </classpathDependencyExcludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsybl-core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-impl</artifactId>
                <version>6.6.0</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-ieee-cdf-converter</artifactId>
                <version>6.6.0</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>2.0.13</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Compile dependencies -->
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-open-loadflow</artifactId>
            <version>${powsybl-open-loadflow.version}</version>
        </dependency>
        <dependency>
            <groupId>com.artelys</groupId>
            <artifactId>knitro-interfaces</artifactId>
            <version>${knitro-interfaces.version}</version>
        </dependency>
        <dependency>
            <groupId>com.nativelibs4java</groupId>
            <artifactId>bridj</artifactId>
            <version>${bridj.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-commons-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-open-loadflow</artifactId>
            <version>${powsybl-open-loadflow.version}</version>
            <classifier>tests</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-iidm-impl</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-iidm-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-ieee-cdf-converter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
